--- a/ecomece/package.json
+++ b/ecomece/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.31.6",
     "clsx": "^2.1.1",
     "next": "^15.5.2",
     "react": "^19.0.0",
