--- a/ecomece/package.json
+++ b/ecomece/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@clerk/localizations": "^3.24.1",
     "@clerk/nextjs": "^6.31.6",
+    "@prisma/client": "^6.16.0",
     "clsx": "^2.1.1",
     "next": "^15.5.2",
+    "prisma": "^6.15.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
